--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "fortnite-discord-bot",
   "version": "1.0.0",
+  "description": "Discord bot to get Fortnite usernames via Epic OAuth",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "discord.js": "^14.15.3",
-    "express": "^4.19.2",
-    "body-parser": "^1.20.3",
-    "uuid": "^10.0.0",
-    "axios": "^1.7.7"
-  }
+    "discord.js": "^14.14.1",
+    "express": "^4.18.2",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "discord",
+    "bot",
+    "fortnite",
+    "epic-games",
+    "oauth"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
